tests/baselines/reference/assignmentToParenthesizedIdentifiers.errors.txt
==== tests/cases/compiler/assignmentToParenthesizedIdentifiers.ts (24 errors) ====
    var x: number;
    x = 3; // OK
    (x) = 3; // OK
    x = ''; // Error
    ~
!!! error TS2011: Cannot convert 'string' to 'number'.
    (x) = ''; // Error
    ~~~
!!! error TS2011: Cannot convert 'string' to 'number'.
    
    module M {
        export var y: number;
    }
    M.y = 3; // OK
    (M).y = 3; // OK
    (M.y) = 3; // OK
    M.y = ''; // Error
    ~~~
!!! error TS2011: Cannot convert 'string' to 'number'.
    (M).y = ''; // Error
    ~~~~~
!!! error TS2011: Cannot convert 'string' to 'number'.
    (M.y) = ''; // Error
    ~~~~~
!!! error TS2011: Cannot convert 'string' to 'number'.
    
    M = { y: 3 }; // Error
    ~
!!! error TS2130: Invalid left-hand side of assignment expression.
    (M) = { y: 3 }; // Error
    ~~~
!!! error TS2130: Invalid left-hand side of assignment expression.
    
    module M2 {
        export module M3 {
            export var x: number;
        }
    
        M3 = { x: 3 }; // Error
        ~~
!!! error TS2130: Invalid left-hand side of assignment expression.
    }
    M2.M3 = { x: 3 }; // OK
    (M2).M3 = { x: 3 }; // OK
    (M2.M3) = { x: 3 }; // OK
    
    M2.M3 = { x: '' }; // Error
    ~~~~~
!!! error TS2012: Cannot convert '{ x: string; }' to 'typeof M2.M3':
!!! 	Types of property 'M2.M3.x' of types '{ x: string; }' and 'typeof M2.M3' are incompatible.
    (M2).M3 = { x: '' }; // Error
    ~~~~~~~
!!! error TS2012: Cannot convert '{ x: string; }' to 'typeof M2.M3':
!!! 	Types of property 'M2.M3.x' of types '{ x: string; }' and 'typeof M2.M3' are incompatible.
    (M2.M3) = { x: '' }; // Error
    ~~~~~~~
!!! error TS2012: Cannot convert '{ x: string; }' to 'typeof M2.M3':
!!! 	Types of property 'M2.M3.x' of types '{ x: string; }' and 'typeof M2.M3' are incompatible.
    
    
    function fn() { }
    fn = () => 3; // Bug 823548: Should be error (fn is not a reference)
    ~~
!!! error TS2130: Invalid left-hand side of assignment expression.
    (fn) = () => 3; // Should be error
    ~~~~
!!! error TS2130: Invalid left-hand side of assignment expression.
    
    function fn2(x: number, y: { t: number }) {
        x = 3;
        (x) = 3; // OK
        x = ''; // Error
        ~
!!! error TS2011: Cannot convert 'string' to 'number'.
        (x) = ''; // Error
        ~~~
!!! error TS2011: Cannot convert 'string' to 'number'.
    
        (y).t = 3; // OK
        (y.t) = 3; // OK
        (y).t = ''; // Error
        ~~~~~
!!! error TS2011: Cannot convert 'string' to 'number'.
        (y.t) = ''; // Error
        ~~~~~
!!! error TS2011: Cannot convert 'string' to 'number'.
    
        y['t'] = 3; // OK
        (y)['t'] = 3; // OK
        (y['t']) = 3; // OK
        y['t'] = ''; // Error
        ~~~~~~
!!! error TS2011: Cannot convert 'string' to 'number'.
        (y)['t'] = ''; // Error
        ~~~~~~~~
!!! error TS2011: Cannot convert 'string' to 'number'.
        (y['t']) = ''; // Error
        ~~~~~~~~
!!! error TS2011: Cannot convert 'string' to 'number'.
    }
    
    enum E {
        A
    }
    E = undefined; // Error
    ~
!!! error TS2130: Invalid left-hand side of assignment expression.
    (E) = undefined; // Error
    ~~~
!!! error TS2130: Invalid left-hand side of assignment expression.
    
    class C {
    
    }
    
    C = undefined; // Error
    ~
!!! error TS2130: Invalid left-hand side of assignment expression.
    (C) = undefined; // Error
    ~~~
!!! error TS2130: Invalid left-hand side of assignment expression.
    